@@ -7,9 +7,30 @@
   <title>Weather App</title>
 </head>
 <body>
-    <div class="main-wrapper">
-        <div class="header"></div>
-        <div class="content-wrapper"></div>
-        <div class="footer"></div>
+  <div class="main-wrapper">
+    <div class="header"></div>
+    <div class="content-wrapper">
+      <div class="content">
+        <div class="weather-panel">
+          <div class="place-title">London</div>
+          <div class="days-wrapper">
+            <div class="day">Today</div>
+            <div class="day">Tomorrow</div>
+            <div class="day">Overtomorrow</div>
+          </div>
+        </div>
+        <div class="weather-panel">
+          <div class="place-title">London</div>
+          <div class="days-wrapper">
+            <div class="day">Today</div>
+            <div class="day">Tomorrow</div>
+            <div class="day">Overtomorrow</div>
+          </div>
+        </div>
+
+        
+      </div>
     </div>
+    <div class="footer"></div>
+  </div>   
 </body>
